# Chat2DB

./: .gitignore  README.md  app.py  langchain_test.py  pyproject.toml  requirements.txt
core/: chains.py  database.py  groq_model.py  sqlite_db.py  utils.py
routes/: create_database.py  current_chat.py  dashboard.py  login.py  main_routes.py  schema.py  view_databases.py
static/css/: style.css
templates/: create_database.html  dashboard.html  er_diagram.html  history.html  index.html  layout.html  login.html  preview_schema.html  progress.html  view-database.html  view_databases.html  view_schema.html
